# adef-tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  adef-intg.spec  adef-tools.spec  environment.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.gitlab/templates/: README.md  auto-bump.yml  deploy.yml  pre-commit.yml  test.yml
adef_intg/: __init__.py
adef_tools/: __init__.py  adef_fn.py  adef_intg_fn.py  raster.py  utils_adef.py  vector.py
docs/: about.md  adef_fn.md  changelog.md  index.md  raster.md  utils.md  utils_adef.md  vector.md
notebooks/: adef_intg.ipynb  adef_intg.py
scripts/: gen_environment.sh
src/: utils.py
workflows/adef_hn/: adef_workflow.py  config.py  db_funcs.py  main.py
