[project]
name = "adef-intg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[distributed]>=2025.4.1",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "owslib>=0.33.0",
    "rioxarray>=0.19.0",
]

[dependency-groups]
dev = [
    "notebook>=7.4.2",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
]
